# ChangeLog for app-misc/screen
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/screen/ChangeLog,v 1.39 2003/11/15 02:48:13 pylon Exp $

  15 Nov 2003; Lars Weiler <pylon@gentoo.org> screen-4.0.1.ebuild:
  Masked stable on x86 and sparc (with ciaranm permission). Added testing
  keyword for ~ppc.

  02 Nov 2003; Christian Birchinger <joker@gentoo.org>
  screen-3.9.15-r1.ebuild:
  Added sparc stable keyword

  15 Oct 2003; Jason Wever <weeve@gentoo.org> screen-4.0.1.ebuild:
  Fixed multi-user instructions so screen will launch correctly now.

  14 Oct 2003; Jason Wever <weeve@gentoo.org> screen-4.0.1.ebuild:
  Added ~sparc keyword and fixed chmod command to resolve bug #31113.

*screen-4.0.1 (07 Oct 2003)

  07 Oct 2003; Donnie Berkholz <spyderous@gentoo.org>; screen-4.0.1.ebuild:
  Version bump, maintainer unclear.

  07 Oct 2003; John Mylchreest <johnm@gentoo.org>; screen-3.9.15-r1.ebuild:
  fixing POSIX 1003.1-2001 chown change. '.' now ':'

  01 Oct 2003; Tavis Ormandy <taviso@gentoo.org> screen-3.9.15-r1.ebuild:
  Stable on alpha

*screen-3.9.15-r1 (12 Jul 2003)

  12 Jul 2003; Robin H. Johnson <robbat2@gentoo.org> screen-3.9.15-r1.ebuild,
  files/screen.pam.system-auth:
  Updated screen.pam (in new screen.pam.system-auth copy) to use pam_stack
  instead of pam_unix directly. Required for pam_ldap working properly.

*screen-3.9.15 (13 Mar 2003)

  27 Apr 2003; Zach Welch <zwelch@gentoo.org> screen-3.9.15.ebuild:
  Add arm to KEYWORDS

  16 Apr 2003; Guy Martin <gmsoft@gentoo.org> screen-3.9.15.ebuild :
  Marked stable on hppa.

  31 Mar 2003; Jan Seidel <tuxus@gentoo.org> screen-3.9.15.ebuild:
  Added mips to KEYWORDS

  30 Mar 2003; Christian Birchinger <joker@gentoo.org> screen-3.9.15.ebuild:
  Added sparc stable keyword

  13 Mar 2003; Brandon Low <lostlogic@gentoo.org> screen-3.9.15.ebuild:
  Version bump

*screen-3.9.13-r4 (16 Jan 2003)
